--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,6 +1,10 @@
 <!--source: https://getbootstrap.com/docs/4.0/components/navbar/ -->
+{% load static %}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    {% comment %} <a class="navbar-brand" href="#">Navbar</a> {% endcomment %}
+    <img src="{% static 'images/logo.png' %}" style="width: 40px; min-width: 3px;"/>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
