--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -6,6 +6,7 @@
 
 <br>
 
+<!--1 hàng, 2 cột: 'Create Customer' & 'Create Order'-->
 <div class="row">
 	<div class="col-md-5">
 		<h5>CUSTOMERS:</h5>
@@ -14,10 +15,16 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
+				
+				{% for cust in customers %}
+					<tr>
+						<td>{{cust.name}}</td>
+						<td>{{cust.phone}}</td>
+					<tr>
+				{% endfor %}
 
 			</table>
 		</div>
@@ -31,11 +38,23 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
-					<th>Date Orderd</th>
+					<th>Date Ordered</th>
 					<th>Status</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
+
+				{% for ord in orders %}
+					<tr>
+						<td>{{ord.product}}</td>
+						<td>{{ord.date_created}}</td>
+						<td>{{ord.status}}</td>
+
+						<!--create buttons for 'Update' & 'Remove'-->
+						<td><a href="">Update</a></td>
+						<td><a href="">Delete</a></td>
+					<tr>
+				{% endfor %}
 		
 			</table>
 		</div>
