--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -14,6 +14,15 @@
 							<th>Category</th>
 							<th>Price</th>
 						</tr>
+
+						{% for i in products %}
+							<tr> 
+								<!--truy cập từng thuộc tính của Product object-->
+								<td>{{i.name}}</td>
+								<td>{{i.category}}</td>
+								<td>{{i.price}}</td>
+							</tr>
+						{% endfor %}
 						
 					</table>
 				</div>
