--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -15,14 +15,17 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
+					<th></th>
 					<th>Customer</th>
 					<th>Phone</th>
 				</tr>
 				
-				{% for cust in customers %}
+				{% for customer in customers %}
 					<tr>
-						<td>{{cust.name}}</td>
-						<td>{{cust.phone}}</td>
+						<!-- tạo hyperlink 'View' để view thông tin customer, dấu '/' trong url dc thêm tự động -->
+						<td><a class="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a></td>
+						<td>{{customer.name}}</td>
+						<td>{{customer.phone}}</td>
 					<tr>
 				{% endfor %}
 
@@ -51,8 +54,8 @@
 						<td>{{ord.status}}</td>
 
 						<!--create buttons for 'Update' & 'Remove'-->
-						<td><a href="">Update</a></td>
-						<td><a href="">Delete</a></td>
+						<td><a class="btn btn-sm btn-info" href="">Update</a></td>
+						<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
 					<tr>
 				{% endfor %}
 		
